# DuckHunt

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: build-tests.yml
cmake/: FindECSTASY.cmake  Options.cmake  macros.cmake
cmake/macros/: set_compiler_flags.cmake
src/: Actions.hpp  CMakeLists.txt  Game.cpp  Game.hpp  GameConfig.cpp  GameConfig.hpp  Player.cpp  Player.hpp  RandomDevice.hpp  main.cpp  placeholder.cpp
src/components/: DrawOrder.hpp  Duck.hpp  DuckIcon.hpp  Position.hpp  Size.hpp  SpriteSheetAnimation.hpp  Velocity.hpp
src/resources/: AssetsMap.hpp  CMakeLists.txt  FixedClock.cpp  FixedClock.hpp  RandomDevice.hpp
src/systems/: CMakeLists.txt  ClearWindow.cpp  ClearWindow.hpp  DisplayWindow.cpp  DisplayWindow.hpp  DrawShape.cpp  DrawShape.hpp  GetRenderWindow.cpp  GetRenderWindow.hpp  Movement.cpp  Movement.hpp  UpdateAnimation.cpp  UpdateAnimation.hpp
tests/: CMakeLists.txt
tests/default/: CMakeLists.txt  tests_placeholder.cpp
